--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,24 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Node.js 관련
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+
+# 빌드 산출물
+build/
+dist/
+
+# 환경 변수 (백엔드와 중복될 수 있지만 안전하게)
+.env
+
+# OS별 불필요 파일
+.DS_Store
+Thumbs.db
+
+# VSCode 설정 폴더 (개인 설정 무시)
+.vscode/
+
